--- a/back/css/MainBack_media.css
+++ b/back/css/MainBack_media.css
@@ -1,5 +1,13 @@
 @charset "UTF-8";
 
-@media screen and (max-width:1407px) {}
+@media screen and (max-width:1407px) {
+    .circlebody {
+        margin-top: 75px;
+    }
+}
 
-@media screen and (max-width:570px) {}
+@media screen and (max-width:570px) {
+    .circlebody {
+        margin-top: 10px;
+    }
+}
