--- a/back/css/MainBeck_style.css
+++ b/back/css/MainBeck_style.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 
-
+body {
+    background: var(--Bcolor);
+}
 .circlebody {
     position: relative;
     width: 100vw; height: 100vh;
@@ -41,10 +43,8 @@
     background: rgba(255,255,255,.06);
     width: 100%;
     height: 100%;
-    padding: 50px;
     position: relative;
     opacity: .7;
-    cursor: pointer;
     overflow: hidden;
     transition: .5s;
 }
@@ -62,3 +62,59 @@
 .face6 {transform: rotateY(225deg) translateZ(-764px);}
 .face7 {transform: rotateY(270deg) translateZ(-764px);}
 .face8 {transform: rotateY(315deg) translateZ(-764px);}
+
+
+/* coming soon */
+.comingsoon {
+    padding-top: 200px;
+    position: relative;
+}
+.comingsoon .inner .top {
+    width: 500px;
+    padding-bottom: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.comingsoon .inner .top h2 {
+    font-size: 56px;
+    font-weight: 700;
+    color: var(--Wcolor);
+}
+.comingsoon .inner .top button {
+    width: 111px;
+    height: 34px;
+    background: var(--Bcolor);
+    border: 1px solid var(--Wcolor);
+    border-radius: 32px;
+    color: var(--Wcolor);
+}
+
+.comingsoon .inner img {
+    border-radius: 0 300px 0 0;
+}
+.comingsoon .inner .txt {
+    font-size: 40px;
+    color: var(--Wcolor);
+    text-transform: uppercase;
+    text-align: right;
+    text-shadow: 0 0 10px rgba(13, 3, 28, 0.1);
+}
+.comingsoon .inner h3 {
+    font-weight: 500;
+    padding-bottom: 46px;
+    position: absolute;
+    bottom: 173px;
+    right: 200px;
+
+}
+.comingsoon .inner p {
+    font-weight: 200;
+    position: absolute;
+    bottom: 24px;
+    right: 200px;
+}
+
+.CScontents2, .CScontents3 {
+    display: none;
+}
